# ceng477-homeworks

HW1/: BVH.cpp  BVH.h  CMakeLists.txt  Makefile  Ray3D.cpp  Ray3D.h  Vec3D.cpp  Vec3D.h  bunny.ppm  cornellbox_front.ppm  exec_time.sh  helpers.cpp  helpers.h  killeroo.ppm  parser.cpp  parser.h  raytracer  raytracer.cpp  render_all.sh  simple.ppm  types.h
HW1/outputs/: tester.py
HW1/results/: cornellbox_front.ppm  killeroo.ppm
HW2/: CMakeLists.txt  Main.cpp  Matrix4.cpp  Matrix4.h  Rotation.cpp  Rotation.h  Scaling.cpp  Scaling.h  Scene.cpp  Scene.h  Transformation.cpp  Transformation.h  Translation.cpp  Translation.h  Triangle.cpp  Triangle.h  Vec3.cpp  Vec3.h  Vec4.cpp  Vec4.h  rasterizer
HW3/: Makefile  README.md  frag0.glsl  frag1.glsl  frag2.glsl  frag3.glsl  main.cpp  vert0.glsl  vert3.glsl
